--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8080
 
 spring.datasource.url=jdbc:mysql://localhost:3306/informatorio
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
