--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.data.jpa.repositories.bootstrap-mode=default
-
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
